--- a/addManually.html
+++ b/addManually.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Helper</title>
+    <title>addManually</title>
+    <meta name="description" content="Fair & Efficient Group Formation: Say goodbye to bias with our randomized grouping system.">
+
+
+    <!-- googlr fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
 
     <!-- boostrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,35 +30,22 @@
 
         <!-- nav bar -->
 
-        <nav class="navbar navbar-expand-lg  mb-4">
-            <div class="container-fluid">
+        <nav class="navbar">
+            <div class="container container_nav">
+                <a class="navbar-brand" href="./index.html">
+                    GroupUs
+                </a>
 
-
-                <a class="navbar-brand" href="./index.html">Grouper</a>
-
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link" href="#">About</a>
-                    </div>
-                </div>
-
+                <a class="nav-link" href="./aboutme.html">about</a>
             </div>
         </nav>
 
 
         <div class="option">
             <div class="opt_button">
-                <h4>Add Students <span id="noteBug">(when done students , click an extra '+' to feth the last
-                        student)</span></h4>
 
-
-
+                
+                <h4 class="add_students"> ADD STUDENTS <BR> <span id="noteBug">(when done adding students , create an extra empty column then click generate )</span></h4>
                 <div class="container">
                     <div class="form_students">
                         <ol id="students_list">
