--- a/aboutme.html
+++ b/aboutme.html
@@ -33,11 +33,15 @@
 
         <nav class="navbar">
             <div class="container container_nav">
+
+                <div class="group_us_image">
+
+                </div>
                 <a class="navbar-brand" href="./index.html">
                     GroupUs
                 </a>
 
-                <a class="nav-link" href="./aboutme.html">about</a>
+                <a class="nav-link" href="#">about</a>
             </div>
         </nav>
 
