--- a/import.html
+++ b/import.html
@@ -35,9 +35,12 @@
     <div class="container_holder">
 
         <!-- nav bar -->
-
         <nav class="navbar">
             <div class="container container_nav">
+
+                <div class="group_us_image">
+
+                </div>
                 <a class="navbar-brand" href="./index.html">
                     GroupUs
                 </a>
