--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     GroupUs
                 </a>
 
-                <a class="nav-link" href="#">about</a>
+                <a class="nav-link" href="./aboutme.html">about</a>
             </div>
         </nav>
         <div class="holder">
