--- a/addManually.html
+++ b/addManually.html
@@ -39,6 +39,10 @@
 
         <nav class="navbar">
             <div class="container container_nav">
+
+                <div class="group_us_image">
+
+                </div>
                 <a class="navbar-brand" href="./index.html">
                     GroupUs
                 </a>
