added google tag

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,10 +2,19 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EQLLP2LVZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3EQLLP2LVZ');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About GroupUs</title>
-    <meta name="description" content="Fair & Efficient Group Formation: Say goodbye to bias with our randomized grouping system.">
+    <meta name="description" content="GroupUs is a project I created to make it easier to put students into teams">
       <!-- favicon -->
 
       <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
