--- a/addManually.html
+++ b/addManually.html
@@ -65,7 +65,7 @@
             <div class="opt_button">
 
                 
-                <h4 class="add_students"> ADD STUDENTS <BR> <span id="noteBug">(when done adding students , create an extra empty column then click generate )</span></h4>
+                <h4 class="add_students"> ADD STUDENTS <BR> <span id="noteBug">( :fill in whole column cell then click ' + ' icon to proceed : <br> when done adding students , create an extra empty column then click generate )</span></h4>
                 <div class="container">
                     <div class="form_students">
                         <ol id="students_list">
