required for inputs before proceeding

--- a/addManually.html
+++ b/addManually.html
@@ -73,7 +73,7 @@
                                 <div class="student_details">
                                     <div class="mb-1">
                                         <label for="first_name" class="form-label label_first_name">First name</label>
-                                        <input type="text" class="form-control" id="first_name">
+                                        <input type="text" class="form-control" id="first_name" required>
                                     </div>
                                     <div class="mb-1">
                                         <label for="last_name" class="form-label label_last_name">Last name</label>
