--- a/addManually.html
+++ b/addManually.html
@@ -77,7 +77,7 @@
                                     </div>
                                     <div class="mb-1">
                                         <label for="last_name" class="form-label label_last_name">Last name</label>
-                                        <input type="text" class="form-control" id="last_name">
+                                        <input type="text" class="form-control" id="last_name" required>
                                     </div>
                                     <div class="mb-1 position_add_more">
                                         <label for="student_number" class="form-label label_student_number">Student
