added .txt file extension

--- a/import.html
+++ b/import.html
@@ -68,7 +68,7 @@
                 </p>
 
                 <p>
-                    Program assumes excel file has first name , last name and student number in order
+                    Program assumes excel/text file has first name , last name and student number in order
                 </p>
 
 
@@ -76,7 +76,7 @@
                 <div class="form_students my-4">
 
                     <div class="input-group mb-3">
-                        <input type="file" class="form-control" id="inputGroupFile02" accept=".xlsx, .xls, .csv">
+                        <input type="file" class="form-control" id="inputGroupFile02" accept=".xlsx, .xls, .csv, .txt">
                     </div>
 
                 </div>
