--- a/addManually.html
+++ b/addManually.html
@@ -168,7 +168,8 @@
 <!-- jsPDF and autable -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
-   
+
+   <!-- adding more studnets -->
     <!-- adding more studnets -->
 
 
