--- a/import.html
+++ b/import.html
@@ -140,7 +140,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <!-- <script src="path/to/jspdf.plugin.autotable.js"></script> -->
-    <script src="./node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
+    <!-- <script src="./node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script> -->
+    <script src="jspdfautable.js"></script>
     <!-- adding more studnets -->
 
 
