--- a/addManually.html
+++ b/addManually.html
@@ -164,6 +164,7 @@
 <!-- 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script> -->
     <script src="./script.js"></script>
+    <script src="addmanually.js"></script>
     
 <!-- jsPDF and autable -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
