--- a/addManually.html
+++ b/addManually.html
@@ -93,7 +93,8 @@
                                         <input type="number" class="form-control" id="student_number" required>
                                 
                                         <!-- Call validation function before adding more students -->
-                                        <a onclick="testingFuncs(this)" class="btn btn-primary add_more_students" id="add_student" href="#" role="button">++</a>
+                                        <a onclick="testingFuncs(this)" class="btn btn-primary add_more_students" id="add_student" href="#" role="button">+</a>
+ 
                                 
                                     </div>
                                 </div>
