bug fix, add more than 2

--- a/addManually.html
+++ b/addManually.html
@@ -105,9 +105,14 @@
                     <div class="grouping">
                         <div class="mb-3">
                             <label for="numberOfGroups" class="form-label">Number of People Per Group </label>
-                            <div class="inputs">
+                            <!-- <div class="inputs">
                                 <input type="number" class="form-control" id="numberOfGroups" required>
                                 <a class="btn btn-primary" href="#" role="button" id="generateGroups">Generate</a>
+                            </div> -->
+
+                            <div class="inputs">
+                                <input type="number" class="form-control" id="numberOfGroups" required>
+                                <a class="btn btn-primary" href="#" role="button" id="generateGroups" style="display: none;">Generate</a>
                             </div>
                         </div>
                     </div>
@@ -146,12 +151,26 @@
 
     </div>
 
+
+    <script>
+        document.getElementById('numberOfGroups').addEventListener('input', function() {
+            var numberOfGroups = parseInt(this.value);
+            var generateButton = document.getElementById('generateGroups');
+            
+            if (numberOfGroups >= 2) {
+                generateButton.style.display = 'inline-block';
+            } else {
+                generateButton.style.display = 'none';
+            }
+        });
+    </script>
     <!-- bootstrap link -->
 
     <script>
         let firstName = document.getElementById("first_name").value;
         let lastName = document.getElementById("last_name").value;
         let studentNumber = document.getElementById("student_number").value;
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
