--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                 </p>
 
                 <div class="opt_button">
-                    <a class="btn btn-primary" href="./addManually.html" role="button">Add Manually</a>
+                    <a class="btn btn-primary" href="./addManually.html" role="button">Manual Entry</a>
                     Or
-                    <a class="btn btn-primary" href="./import.html" role="button">Import Excel File</a>
+                    <a class="btn btn-primary" href="./import.html" role="button"> Excel Import</a>
                 </div>
             </div>
 
