--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <!-- stylesheet link -->
     <link rel="stylesheet" href="./style.css">
 
+    <!-- font style -->
+    <script src="https://kit.fontawesome.com/018d9ba538.js" crossorigin="anonymous"></script>
+
 </head>
 
 <style>
@@ -68,14 +71,11 @@
     }
 </style>
 
-<body>
+<body>    
     <div class="container_holder">
 
 
         <!-- nav bar -->
-
-
-
 
         <nav class="navbar">
             <div class="container container_nav">
@@ -102,9 +102,13 @@
                 </p>
 
                 <div class="opt_button">
-                    <a class="btn btn-primary" href="./addManually.html" role="button">Manual Entry</a>
+                    <a class="btn btn-primary" href="./addManually.html" role="button">Manual Entry
+                        <i class="fa-regular fa-keyboard"></i>
+                    </a>
                     Or
-                    <a class="btn btn-primary" href="./import.html" role="button"> Excel Import</a>
+                    <a class="btn btn-primary" href="./import.html" role="button"> Excel Import
+                        <i class="fa-solid fa-file-import"></i>
+                    </a>
                 </div>
             </div>
 
