--- a/import.html
+++ b/import.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="./style.css">
 
     <!-- jsPDF libray -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 
 
     <!-- dropzone js library -->
@@ -144,8 +144,6 @@
     </script>
 
 
-
-
     <!-- bootstrap link -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -166,7 +164,7 @@
 
 <!-- dropzone -->
 
-    <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
+    <!-- <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script> -->
 
 </body>
 
