seo. canonical rel

--- a/addManually.html
+++ b/addManually.html
@@ -11,6 +11,13 @@
 
   gtag('config', 'G-3EQLLP2LVZ');
 </script>
+
+
+
+ <!-- canonical rel -->
+ <link rel="canonical" href="https://groupus.online/addManually.html">
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>addManually</title>
