--- a/import.html
+++ b/import.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+    <!-- canonical rel -->
+    <link rel="canonical" href="https://groupus.online/import.html">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EQLLP2LVZ"></script>
     <script>
