--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@
 
   gtag('config', 'G-3EQLLP2LVZ');
 </script>
+
+<link rel="canonical" href="https://groupus.online/aboutme.html">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About GroupUs</title>
