--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
   gtag('config', 'G-3EQLLP2LVZ');
 </script>
+
+<!-- canonical rel -->
+
+<link rel="canonical" href="https://groupus.online/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
