--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,9 @@
   gtag('config', 'G-3EQLLP2LVZ');
 </script>
 
-<link rel="canonical" href="https://groupus.online/aboutme.html">
+<!-- canonical rel -->
+
+<link rel="canonical" href="https://groupus.online/aboutme">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About GroupUs</title>
@@ -53,11 +55,11 @@
                 <div class="group_us_image">
 
                 </div>
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="http://groupus.online/">
                     GroupUs
                 </a>
 
-                <a class="nav-link" href="#">about</a>
+                <a class="nav-link" href="https://groupus.online/aboutme">about</a>
             </div>
         </nav>
 
