--- a/addManually.html
+++ b/addManually.html
@@ -15,7 +15,7 @@
 
 
  <!-- canonical rel -->
- <link rel="canonical" href="https://groupus.online/addManually.html">
+ <link rel="canonical" href="https://groupus.online/addManually">
 
 
     <meta charset="UTF-8">
@@ -66,11 +66,11 @@
                 <div class="group_us_image">
 
                 </div>
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="http://groupus.online/">
                     GroupUs
                 </a>
 
-                <a class="nav-link" href="./aboutme.html">about</a>
+                <a class="nav-link" href="https://groupus.online/aboutme">about</a>
             </div>
         </nav>
 
