--- a/import.html
+++ b/import.html
@@ -4,7 +4,7 @@
 <head>
 
     <!-- canonical rel -->
-    <link rel="canonical" href="https://groupus.online/import.html">
+    <link rel="canonical" href="https://groupus.online/import">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3EQLLP2LVZ"></script>
     <script>
@@ -62,11 +62,11 @@
                 <div class="group_us_image">
 
                 </div>
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="http://groupus.online/">
                     GroupUs
                 </a>
 
-                <a class="nav-link" href="./aboutme.html">about</a>
+                <a class="nav-link" href="https://groupus.online/aboutme">about</a>
             </div>
         </nav>
 
