--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!-- canonical rel -->
 
 <link rel="canonical" href="https://groupus.online/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
@@ -87,11 +88,11 @@
                 <div class="group_us_image">
 
                 </div>
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="http://groupus.online/">
                     GroupUs
                 </a>
 
-                <a class="nav-link" href="./aboutme.html">about</a>
+                <a class="nav-link" href="https://groupus.online/aboutme">about</a>
             </div>
         </nav>
         <div class="holder">
@@ -106,11 +107,12 @@
                 </p>
 
                 <div class="opt_button">
-                    <a class="btn btn-primary" href="./addManually.html" role="button">Manual Entry
+                    <a rel="canonical" class="btn btn-primary" href="https://groupus.online/addManually" role="button">Manual Entry
                         <i class="fa-regular fa-keyboard"></i>
                     </a>
                     Or
-                    <a class="btn btn-primary" href="./import.html" role="button"> Excel Import
+            
+                    <a rel="canonical" class="btn btn-primary" href="https://groupus.online/import" role="button"> Excel Import
                         <i class="fa-solid fa-file-import"></i>
                     </a>
                 </div>
