--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,7 @@
                 <div class="group_us_image">
 
                 </div>
-                <a class="navbar-brand" href="http://groupus.online/">
+                <a class="navbar-brand" href="https://groupus.online/">
                     GroupUs
                 </a>
 
