--- a/addManually.html
+++ b/addManually.html
@@ -66,7 +66,7 @@
                 <div class="group_us_image">
 
                 </div>
-                <a class="navbar-brand" href="http://groupus.online/">
+                <a class="navbar-brand" href="https://groupus.online/">
                     GroupUs
                 </a>
 
