added new google tag

--- a/import.html
+++ b/import.html
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QMN6P1SYM7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QMN6P1SYM7');
+</script>
+
     <!-- canonical rel -->
     <link rel="canonical" href="https://groupus.online/import">
     <!-- Google tag (gtag.js) -->
