--- a/addManually.html
+++ b/addManually.html
@@ -2,16 +2,19 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EQLLP2LVZ"></script>
+
+
+<!-- another google tag -->
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QMN6P1SYM7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3EQLLP2LVZ');
+  gtag('config', 'G-QMN6P1SYM7');
 </script>
-
 
 
  <!-- canonical rel -->
