--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EQLLP2LVZ"></script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QMN6P1SYM7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3EQLLP2LVZ');
+  gtag('config', 'G-QMN6P1SYM7');
 </script>
 
 <!-- canonical rel -->
