--- a/import.html
+++ b/import.html
@@ -13,6 +13,11 @@
   gtag('config', 'G-QMN6P1SYM7');
 </script>
 
+    <!--    google ads -->
+
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305479798393157"
+     crossorigin="anonymous"></script>
+
     <!-- canonical rel -->
     <link rel="canonical" href="https://groupus.online/import">
     <!-- Google tag (gtag.js) -->
