added google ads

--- a/addManually.html
+++ b/addManually.html
@@ -16,6 +16,11 @@
   gtag('config', 'G-QMN6P1SYM7');
 </script>
 
+  <!--    google ads -->
+
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5305479798393157"
+     crossorigin="anonymous"></script>
+
 
  <!-- canonical rel -->
  <link rel="canonical" href="https://groupus.online/addManually">
