--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                 </p>
 
                 <div class="opt_button">
-                    <a rel="canonical" class="btn btn-primary" href="https://groupus.online/addManually" role="button">Manual Entry
+                    <a rel="canonical" class="btn btn-primary" href="./addManually.html" role="button">Manual Entry
                         <i class="fa-regular fa-keyboard"></i>
                     </a>
                     Or
             
-                    <a rel="canonical" class="btn btn-primary" href="https://groupus.online/import" role="button"> Excel Import
+                    <a rel="canonical" class="btn btn-primary" href="./importhtml" role="button"> Excel Import
                         <i class="fa-solid fa-file-import"></i>
                     </a>
                 </div>
